manifest/cvat-db-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cvat-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cvat-db
  serviceName: cvat-db
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: cvat-db
    spec:
      containers:
      - name: cvat-db
        image: postgres:10-alpine
        ports:
        - name: psql
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: cvat-db
          mountPath: /var/lib/postgresql/data
        resources: {}
        securityContext:
          runAsUser: 0
      volumes:
      - name: cvat-db
        persistentVolumeClaim:
          claimName: cvat-db
      tolerations:
      - key: kubernetes.azure.com/scalesetpriority
        operator: Equal
        value: spot
        effect: NoSchedule
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
