manifest/cvat-statefullset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: cvat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cvat
  template:
    metadata:
      labels:
        app: cvat
    spec:
      volumes:
        - name: cvat-data
          persistentVolumeClaim:
            claimName: cvat-data
        - name: cvat-keys
          persistentVolumeClaim:
            claimName: cvat-keys
        - name: cvat-logs
          persistentVolumeClaim:
            claimName: cvat-logs
        - name: cvat-share
          persistentVolumeClaim:
            claimName: cvat-share
      serviceAccountName: cvat-sa
      containers:
        - resources: {}
          name: cvat
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: cvat-data
              mountPath: /home/django/data
            - name: cvat-keys
              mountPath: /home/django/keys
            - name: cvat-logs
              mountPath: /home/django/logs
            - name: cvat-share
              readOnly: true
              mountPath: /home/django/share
          image: 'openvino/cvat_server:v2.1.0'
      securityContext:
        fsGroup: 1000
  serviceName: cvat
