manifest/cvat-ui-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cvat-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cvat-ui
  serviceName: cvat-ui
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: cvat-ui
    spec:
      containers:
      - name: cvat-ui
        image: openvino/cvat_ui:v2.1.0
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources: {}
        securityContext:
          runAsUser: 0
      tolerations:
      - key: kubernetes.azure.com/scalesetpriority
        operator: Equal
        value: spot
        effect: NoSchedule
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
