manifest/cvat-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: cvat-redis
spec:
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: cvat-redis
