manifest/cvat-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cvat
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: cvat
