manifest/cvat-ui.yaml
kind: Service
apiVersion: v1
metadata:
  name: cvat-ui
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: cvat-ui
